@@ -40,16 +40,23 @@
           <thead>
             <tr>
               <th class="cr-table-cell th--no-border-bottom th--no-border-top"> </th>
-              <th class="header cr-table-cell shards-table-schema_name th--no-border-top" ng-repeat="(schema_key, schema_value) in ::schemas track by schema_key" colspan="{{:: schema_value }}"> {{:: schema_key }} </th>
+              <th class="header cr-table-cell shards-table-schema_name th--no-border-top" ng-repeat="(schema_key, schema_value) in schemas track by schema_key" colspan="{{ schema_value }}"> {{ schema_key }} </th>
             </tr>
             <tr>
               <th class="cr-table-cell th--no-border-top"> </th>
-              <th class="header cr-table-cell shards-table-table_name th--no-border-bottom" ng-repeat="(t_key, t_value) in ::tables track by t_key" ng-click="goToUrl('tables/' + t_key.split('.')[0] +'/'+ t_key.split('.')[1])" colspan="{{:: t_value }}">{{:: t_key.split('.')[1] }}</th>
+              <th class="header cr-table-cell shards-table-table_name th--no-border-bottom" ng-repeat="(t_key, t_value) in tables track by t_key" ng-click="goToUrl('tables/' + t_key.split('.')[0] +'/'+ t_key.split('.')[1])" colspan="{{ t_value }}">{{ t_key.split('.')[1] }}</th>
             </tr>
           </thead>
           <tbody>
            <cr-custom-tooltip id="cr-custom-tooltip" class="cr-custom-tooltip" page-x="pageX" page-y="pageY" ng-if="displayTooltip">
-             <div ng-show="!isShard" class="node-content">
+             
+             <div class="progress" ng-show="tooltipLoading">
+              <div class="indeterminate"></div>
+             </div>
+
+             <div ng-show="tooltipError" class="node-content">No Information available.</div>
+
+             <div ng-show="!isShard && !tooltipLoading && !tooltipError" class="node-content">
               <div class="cr-custom-tooltip-section">
                   <div class="cr-custom-tooltip-label"> Name </div> 
                   <div> {{ tooltipData.name }} </div> 
@@ -63,7 +70,7 @@
                   <div> {{ tooltipData.rest_url }} </div> 
                 </div>
               </div>
-             <div ng-show="isShard" class="shard-content">
+             <div ng-show="isShard && !tooltipLoading && !tooltipError" class="shard-content">
                <div class="cr-custom-tooltip-section">  
                     <div class="cr-custom-tooltip-label"> ID </div> 
                     <div> {{ tooltipData.id }}  </div> 
@@ -92,15 +99,15 @@
                 </div>  
              </div>
            </cr-custom-tooltip>
-            <tr ng-repeat="(node_key, node_value) in ::shards track by node_key" ng-show="node_value.node_info.name != 'UNASSIGNED'">
+            <tr ng-repeat="(node_key, node_value) in shards track by node_key" ng-show="node_value.node_info.name != 'UNASSIGNED'">
               <td class="cr-table-cell shards-table-node" ng-click="goToUrl('nodes/' + node_key)" data-node="{{node_key}}">
                 {{ node_value.node_info.name }}
               </td>
-              <td class="cr-table-cell" ng-repeat="(shard_by_table_key, shard_by_table_value) in ::node_value.shards_by_table track by shard_by_table_key"> 
+              <td class="cr-table-cell" ng-repeat="(shard_by_table_key, shard_by_table_value) in node_value.shards_by_table track by shard_by_table_key"> 
                 <shard-wrapper length="shard_by_table_value.shards.length"  class="shard-item-wrapper"> 
-                  <div ng-repeat="(shard_key, shard_value) in ::shard_by_table_value.shards track by shard_key" class="shard-item" ng-class="shard_value.state_class" data-key="{{::shard_value.key}}" data-table="{{shard_by_table_key}}" data-node="{{node_key}}"
+                  <div ng-repeat="(shard_key, shard_value) in shard_by_table_value.shards track by shard_key" class="shard-item" ng-class="shard_value.state_class" data-key="{{shard_value.key}}" data-table="{{shard_by_table_key}}" data-node="{{node_key}}" data-id="{{shard_value.id}}"
                   >
-                    <span class="shard-number" ng-show="idOption">{{:: shard_value.id }}</span>
+                    <span class="shard-number" ng-show="idOption">{{ shard_value.id }}</span>
                   </div> 
                 </shard-wrapper>   
               </td>
@@ -109,10 +116,10 @@
               <td class="cr-table-cell shards-table-node" data-node="unassigned">
                 <div class="shards-table-header">Unassigned</div>
               </td>
-              <td class="cr-table-cell" ng-repeat="(shard_by_table_key, shard_by_table_value) in ::shards.unassigned.shards_by_table track by shard_by_table_key"> 
+              <td class="cr-table-cell" ng-repeat="(shard_by_table_key, shard_by_table_value) in shards.unassigned.shards_by_table track by shard_by_table_key"> 
                 <shard-wrapper length="shard_by_table_value.shards.length"  class="shard-item-wrapper"> 
-                  <div ng-repeat="(shard_key, shard_value) in ::shard_by_table_value.shards track by shard_key" class="shard-item" ng-class="shard_value.state_class"  data-key="{{shard_value.key}}" data-table="{{shard_by_table_key}}" data-node="unassigned">
-                    <span class="shard-number" ng-show="idOption">{{:: shard_value.id }}</span>
+                  <div ng-repeat="(shard_key, shard_value) in shard_by_table_value.shards track by shard_key" class="shard-item" ng-class="shard_value.state_class"  data-key="{{shard_value.key}}" data-table="{{shard_by_table_key}}" data-node="unassigned" data-id="{{shard_value.id}}">
+                    <span class="shard-number" ng-show="idOption">{{ shard_value.id }}</span>
                   </div> 
                 </shard-wrapper>   
               </td>
